--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,13 @@
   display: flex;
   flex-wrap: wrap;
 }
+h3{
+  font-size: 4em;
+}
+/* @font-face {
+  font-family: 'Calligraffitti', cursive;
+  font-style: normal;
+  font-weight: normal;
+  src: local('Calligraffitti', cursive) url("https://fonts.googleapis.com/css?family=Calligraffitti") format('woff')
+
+} */
