--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background: blue */
+  background: linear-gradient(to right, rgb(253, 148, 8), rgb(246, 156, 206));
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+    font-size: 4em;
+}
+h1 {
+  font-size: 4em;
 }
