--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -47,3 +47,6 @@ h3{
   src: local('Calligraffitti', cursive) url("https://fonts.googleapis.com/css?family=Calligraffitti") format('woff')
 
 } */
+.input{
+  margin-bottom: 20px;
+}
