--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,52 +1,14 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 .card{
-  float:left;
-  display: flex;
+  display: inline-flex;
   flex-wrap: wrap;
 }
 h3{
   font-size: 4em;
+ 
 }
-/* @font-face {
-  font-family: 'Calligraffitti', cursive;
-  font-style: normal;
-  font-weight: normal;
-  src: local('Calligraffitti', cursive) url("https://fonts.googleapis.com/css?family=Calligraffitti") format('woff')
 
-} */
 .input{
   margin-bottom: 20px;
 }
